<resources>
    <string name="app_name">DiscountShop</string>
    <string name="product">Products</string>
    <string name="me">Me</string>
    <string name="shop">Shops</string>
    <string name="order_by_brand">Order by brand</string>
    <string name="order_by_discount">Order by discount</string>
    <string name="order_by_name">Order by name</string>
    <string name="your_credit">Your credit</string>
    <string name="logout">Logout</string>
    <string name="add_a_barcode">Add a barcode</string>
    <string name="add_a_discount_information">Add a discount information</string>
    <string name="product_name">Product name</string>
    <string name="scan">Scan</string>
    <string name="product_brand">Product brand</string>
    <string name="product_capacity">Product capacity</string>
    <string name="add_a_discount_info">Add a discount info</string>
    <string name="product_discount">Product discount</string>
    <string name="shop_discount">Shop discount</string>
    <string name="name">Name</string>
    <string name="brand">Brand</string>
    <string name="discount">Discount</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="add_shop_discount_information">Add shop discount information</string>
    <string name="capacity">Capacity</string>
    <string name="phone_number">Phone number</string>
    <string name="get_verification_code">Get verification code</string>
    <string name="verification_code">Verification code</string>
    <string name="login">Login</string>
    <string name="input_your_phone_number">Input your phone number</string>
    <string name="date">Expiry date</string>
    <string name="post_product_discount">Post product discount</string>
    <string name="upvote">66</string>
    <string name="_8">8</string>
    <string name="_30">30</string>
    <string name="date_view">Until: " "</string>
    <string name="shop_name">Shop Name:" "</string>
    <string name="discount_off">Discount:" "</string>
    <string name="integer">%d</string>
    <string name="error">something is wrong</string>
    <string name="off">% off</string>
    <string name="scan_product">Scan Product</string>
    <string name="brand_r">Brand:" "</string>
    <string name="capacity_r">Capacity:" "</string>
    <string name="product_name_r">Product name:" "</string>
    <string name="barcode">Barcode</string>
    <string name="input_error">Input error</string>
    <string name="input_success">Input success</string>
    <string name="input_invalid">Input is invalid</string>
    <string name="barcode_exist">Barcode exist</string>
    <string name="discount_invalid">Discount number or expiry date is invalid</string>
    <string name="sign_out">Sign out</string>
    <string name="user_name">user name</string>
    <string name="user_email">user email</string>
    <string name="add">Add</string>
    <string name="databaseError">Database Error</string>
    <string name="barcodeDetection">Receive Detections:</string>
    <string name="select_date">"  "Select Date</string>
    <string name="no_barcode">No barcode found</string>
    <string name="space">"  "</string>
    <string name="empty">""</string>
    <string name="slash">/</string>
    <string name="pager_tag">onCreate: starting</string>

</resources>
