<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/discount_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:paddingTop="5dp"
        android:stretchColumns="1">

        <Button
            android:id="@+id/scan_btn"
            android:layout_margin="5dp"
            android:text="@string/scan_product"
            android:background="@drawable/button"
            android:textColor="@color/pink"/>

        <TableRow>

            <TextView
                android:id="@+id/name"
                android:text="@string/name"
                android:textSize="16sp"
                android:textColor="@color/pink"/>

            <EditText
                android:id="@+id/name_et"
                android:inputType="text"
                android:textColor="@color/colorText"/>
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/brand"
                android:text="@string/brand"
                android:textSize="16sp"
                android:textColor="@color/pink" />

            <EditText
                android:id="@+id/brand_et"
                android:inputType="text"
                android:textColor="@color/colorText"/>
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/capacity_tv"
                android:text="@string/capacity"
                android:textSize="16sp"
                android:textColor="@color/pink" />

            <EditText
                android:id="@+id/capacity_et"
                android:inputType="text"
                android:textColor="@color/colorText"/>
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/discount"
                android:text="@string/discount"
                android:textSize="16sp"
                android:textColor="@color/pink" />

            <EditText
                android:id="@+id/discount_et"
                android:inputType="number"
                android:textColor="@color/colorText"/>

            <TextView
                android:text="@string/off"
                android:textSize="15sp"/>
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/expiry_date"
                android:text="@string/date"
                android:textSize="16sp"
                android:textColor="@color/pink" />

            <TextView
                android:id="@+id/date_tv"
                android:hint="@string/select_date"
                android:textSize="20sp"/>
        </TableRow>

        <Button
            android:id="@+id/discount_confirm_btn"
            android:layout_margin="40dp"
            android:text="@string/confirm"
            android:background="@drawable/button"
            android:textColor="@color/pink"/>

    </TableLayout>
</android.support.constraint.ConstraintLayout>