<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/discount_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:paddingTop="30dp"
        android:stretchColumns="1">

        <TableRow>

            <TextView
                android:id="@+id/shopName"
                android:text="@string/name"
                android:textColor="@color/pink"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/shop_name_et"
                android:inputType="text"
                android:textColor="@color/colorText"/>
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/shop_discount"
                android:text="@string/discount"
                android:textColor="@color/pink"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/shop_discount_et"
                android:inputType="number"
                android:textColor="@color/colorText"/>
            <TextView
                android:text="@string/off"
                android:textSize="15sp"/>
        </TableRow>

        <TableRow
            android:paddingBottom="100dp">

            <TextView
                android:id="@+id/expiry_date"
                android:text="@string/date"
                android:textColor="@color/pink"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/shop_date_tv"
                android:hint="@string/select_date"
                android:textSize="15sp"/>

        </TableRow>

        <Button
            android:id="@+id/shop_discount_confirm_btn"
            android:layout_margin="4dp"
            android:text="@string/confirm"
            android:background="@drawable/button"
            android:textColor="@color/pink" />

    </TableLayout>

</RelativeLayout>