<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="5dp"
    android:background="@drawable/shap"
    android:gravity="center"
    android:padding="5dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/pr_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/product_name_r"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/pink"
            android:textSize="16dp"/>
        <TextView
            android:id="@+id/prduct_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textSize="15sp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/product_brand_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pr_name_layout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brand_r"
            android:textColor="@color/pink"
            android:textSize="16dp"/>

        <TextView
            android:id="@+id/pr_brand_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textSize="15sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pr_capacity_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_brand_layout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capacity_r"
            android:textColor="@color/pink"
            android:textSize="16dp"/>

        <TextView
            android:id="@+id/pr_capacity_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textSize="15sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pr_count_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pr_capacity_layout"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/pr_disc_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discount_off"
                android:textColor="@color/pink"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/product_disc_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_30"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/off"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearlayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_view"
                android:textColor="@color/pink"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/pr_date_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_8"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>