<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/barcode_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:stretchColumns="1">

        <Button
            android:id="@+id/scan_barcode_btn"
            android:text="@string/scan"
            android:layout_margin="5dp"
            android:background="@drawable/button"
            android:textColor="@color/pink"/>

        <TableRow>
            <TextView
                android:layout_margin="10dp"
                android:text="@string/barcode"
                android:textSize="16sp"
                android:textColor="@color/pink"/>

            <EditText
                android:id="@+id/product_barcode_et"
                android:inputType="text"
                android:textColor="@color/colorText"/>
        </TableRow>

        <TableRow>

            <TextView
                android:layout_margin="10dp"
                android:text="@string/product_name"
                android:textSize="16sp"
                android:textColor="@color/pink"/>

            <EditText
                android:id="@+id/product_name_et"
                android:inputType="text"
                android:textColor="@color/colorText"/>
        </TableRow>

        <TableRow>

            <TextView
                android:layout_margin="10dp"
                android:text="@string/product_brand"
                android:textSize="16sp"
                android:textColor="@color/pink"/>

            <EditText
                android:id="@+id/product_brand_et"
                android:inputType="text"
                android:textColor="@color/colorText"/>
        </TableRow>

        <TableRow>

            <TextView
                android:layout_margin="10dp"
                android:text="@string/product_capacity"
                android:textSize="16sp"
                android:textColor="@color/pink"/>

            <EditText
                android:id="@+id/product_capacity_et"
                android:inputType="text"
                android:textColor="@color/colorText"/>
        </TableRow>

        <Button
            android:id="@+id/barcode_confirm_btn"
            android:layout_margin="40dp"
            android:text="@string/confirm"
            android:background="@drawable/button"
            android:textColor="@color/pink"/>


    </TableLayout>

</android.support.constraint.ConstraintLayout>






